fix: nav menu toggle being off centre when nav logo collapses

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -98,7 +98,7 @@ body {
 /* Navigation */
 $nav-transition-time: 1s;
 #mainNavbar {
-	padding: .5rem 0;
+	padding: 0;
 	font-size: 1.12rem;
 	background: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -702,6 +702,7 @@ hr.white {
 	}
 	#mainNavbar #navLogo {
 		padding-bottom: 0;
+		margin-top: 10px;
 		margin-bottom: 0;
   }
   #treatmentsSlider #sliderImage img {
